--- a/components/Social/styles.module.css
+++ b/components/Social/styles.module.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   gap: 1rem;
+  margin: 3rem 0;
 
   & a {
     display: inline-flex;
@@ -19,7 +20,7 @@
 
     &:focus-visible {
       box-shadow: 0 0.25rem 0.5rem -0.125rem rgba(0, 0, 0, 0.1),
-        0 0 0 0.25rem rgba(0, 0, 0, 0.05);
+        0 0 0 0.25rem var(--primary-200);
     }
   }
 }
