--- a/pages/styles.module.css
+++ b/pages/styles.module.css
@@ -1,5 +1,9 @@
 .wrapper {
-}
-
-.header {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  z-index: 10;
 }
