--- a/components/Introduction/styles.module.css
+++ b/components/Introduction/styles.module.css
@@ -6,7 +6,7 @@
 }
 
 .heading {
-  font-size: 60px;
+  font-size: 3.75rem;
   line-height: 1.1;
   font-weight: 600;
   letter-spacing: -0.02em;
@@ -14,11 +14,23 @@
   width: 100%;
   max-width: 570px;
   margin: 0 0 1rem 0;
+
+  @media (max-width: 767px) {
+    font-size: 2rem;
+    padding: 0 1rem;
+    max-width: 330px;
+  }
 }
 
 .position {
   font-weight: 500;
   margin: 0.5rem 0;
+
+  @media (max-width: 767px) {
+    text-align: center;
+    width: 100%;
+    padding: 0 1rem;
+  }
 }
 
 .link {
@@ -52,8 +64,6 @@
   }
 
   &:hover {
-    color: var(--primary-500);
-
     &:after {
       background-color: var(--primary-300);
     }
@@ -74,9 +84,9 @@
   font-weight: 500;
   margin: 0 0.5rem;
 
-  @media (max-width: 499px) {
+  @media (max-width: 767px) {
     display: block;
-    height: 1px;
+    height: 0.5rem;
     opacity: 0;
   }
 }
