--- a/components/Squiggle/styles.module.css
+++ b/components/Squiggle/styles.module.css
@@ -8,4 +8,18 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
+}
+
+.squiggle {
+  width: 38.75rem;
+  max-width: none;
+  margin: 0 auto;
+  display: block;
+  flex-shrink: 0;
+
+  @media (max-width: 767px) {
+    width: 25rem;
+    margin-top: -3rem;
+  }
 }
