--- a/components/Social/styles.module.css
+++ b/components/Social/styles.module.css
@@ -3,6 +3,7 @@
   justify-content: center;
   gap: 1rem;
   margin: 3rem 0;
+  transition: 0.6s ease opacity;
 
   & a {
     display: inline-flex;
@@ -12,7 +13,7 @@
     user-select: none;
     outline: 0;
     box-shadow: 0 0.25rem 0.5rem -0.125rem rgba(0, 0, 0, 0.1);
-    transition: 0.2s ease border, 0.2s ease box-shadow;
+    transition: 0.6s ease border, 0.6s ease box-shadow;
 
     &:hover {
       border-color: var(--primary-500);
