--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,4 +1,4 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import './prism.css';
-@import 'tailwindcss/utilities';
+@import url('tailwindcss/base');
+@import url('tailwindcss/components');
+@import url('./prism.css');
+@import url('tailwindcss/utilities');
