--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -2,6 +2,26 @@
 @import url('tailwindcss/components');
 @import url('tailwindcss/utilities');
 
+* {
+  scrollbar-color: rgb(255 255 255 / 10%) rgb(255 255 255 / 0%);
+  scrollbar-width: thin;
+}
+
+*::-webkit-scrollbar {
+  width: 4px;
+}
+
+*::-webkit-scrollbar-track {
+  border-radius: 0px;
+  background: rgb(255 255 255 / 0%);
+}
+
+*::-webkit-scrollbar-thumb {
+  border: 4px solid rgb(255 255 255 / 0%);
+  border-radius: 0px;
+  background-color: rgb(255 255 255 / 10%);
+}
+
 html,
 body {
   -webkit-tap-highlight-color: rgb(0 0 0 / 0%);
@@ -10,4 +30,9 @@ body {
 
 body {
   font-size: 14px;
+  overflow-y: scroll;
+}
+
+#__next {
+  height: 100%;
 }
