--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,6 +1,6 @@
-@import url('tailwindcss/base');
-@import url('tailwindcss/components');
-@import url('tailwindcss/utilities');
+@import url("tailwindcss/base");
+@import url("tailwindcss/components");
+@import url("tailwindcss/utilities");
 
 * {
   scrollbar-color: rgb(255 255 255 / 10%) rgb(255 255 255 / 0%);
@@ -31,7 +31,6 @@ html,
 body {
   overscroll-behavior: none;
   -webkit-tap-highlight-color: rgb(0 0 0 / 0%);
-  -webkit-tap-highlight-color: transparent;
 }
 
 body {
